--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.13</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.7</version>
+        </dependency>
 
     </dependencies>
 
